Fix borders on collapse component

--- a/less/style/blocks/collapse.less
+++ b/less/style/blocks/collapse.less
@@ -76,11 +76,11 @@
 .collapse__panels__item__border {
     height: 1px;
     background: @color-gray--mid;
-    margin: 0 -10px;
+    margin: 0 -8px;
 }
 
 .collapse__panels__bottom-border {
     height: 1px;
     background: @color-gray--mid;
-    margin: 0 -10px;
+    margin: 0 -8px;
 }
